force-app/main/default/objects/Fact__c/fields/AdviceDeckDescription__c.field-meta.xml
<CustomField>
    <fullName>AdviceDeckDescription__c</fullName>
    <description>An external description field for use in other systems, decks etc.</description>
    <label>Advice Deck Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>