force-app/main/default/objects/Fact__c/fields/AgeApplies__c.field-meta.xml
<CustomField>
    <fullName>AgeApplies__c</fullName>
    <description>Should facts of this type require an age to be recorded as supporting information</description>
    <label>Age applies?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>