force-app/main/default/objects/Fact__c/fields/AppliesToPerson__c.field-meta.xml
<CustomField>
    <fullName>AppliesToPerson__c</fullName>
    <label>Applies to person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>