force-app/main/default/objects/Fact__c/fields/AsktodisplayonTimeline__c.field-meta.xml
<CustomField>
    <fullName>AsktodisplayonTimeline__c</fullName>
    <description>Should users be asked if facts of this type should be displayed on the lifeline</description>
    <label>Ask to display on timeline?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>