force-app/main/default/objects/Fact__c/fields/ConsiderFinancialImpact__c.field-meta.xml
<CustomField>
    <fullName>ConsiderFinancialImpact__c</fullName>
    <description>Do planners need to consider the financial impact of this type of fact during advice?</description>
    <label>Consider financial impact?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>