force-app/main/default/objects/Fact__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Managed by product team, displays to user when creating facts.</description>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>