force-app/main/default/objects/Fact__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <description>The unique identifier for this piece of configuration data. Used in system build to ensure consistency across environments.</description>
    <externalId>true</externalId>
    <label>Developer name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>