force-app/main/default/objects/Fact__c/fields/FactCategory__c.field-meta.xml
<CustomField>
    <fullName>FactCategory__c</fullName>
    <description>Link to high level category</description>
    <label>Fact category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FactCategory__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FactCategory__c</referenceTo>
    <relationshipLabel>Facts</relationshipLabel>
    <relationshipName>MasterFacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>