force-app/main/default/objects/Fact__c/fields/HasAmount__c.field-meta.xml
<CustomField>
    <fullName>HasAmount__c</fullName>
    <description>Indicates if facts of this type require an amount</description>
    <label>Has amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>