force-app/main/default/objects/Fact__c/fields/NotesRequired__c.field-meta.xml
<CustomField>
    <fullName>NotesRequired__c</fullName>
    <label>Notes required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>