force-app/main/default/objects/Fact__c/fields/PostCreateInstructions__c.field-meta.xml
<CustomField>
    <fullName>PostCreateInstructions__c</fullName>
    <description>Field to display to users any follow on instructions from adding this fact</description>
    <inlineHelpText>Populate this field with any instructions to advise on things to keep in mind or do with this fact once it has been added to the household.</inlineHelpText>
    <label>Post create instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>