force-app/main/default/objects/Fact__c/fields/Transient__c.field-meta.xml
<CustomField>
    <fullName>Transient__c</fullName>
    <label>Transiency?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>