force-app/main/default/objects/Fact__c/fields/VulnerabilityCategory__c.field-meta.xml
<CustomField>
    <fullName>VulnerabilityCategory__c</fullName>
    <description>To categorise vulnerability facts into the 4 main triggers of vulnerability for reporting to the FCA.</description>
    <label>Vulnerability category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Life events</fullName>
            </value>
            <value>
                <fullName>Resilience</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Capability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>