force-app/main/default/objects/Fact__c/validationRules/FactCategoryCannotChange.validationRule-meta.xml
<ValidationRule>
    <fullName>FactCategoryCannotChange</fullName>
    <active>true</active>
    <description>Cannot change fact category once created</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
NOT(ISNEW())
&amp;&amp;
ISCHANGED(FactCategory__c)</errorConditionFormula>
    <errorMessage>Cannot change the category once a fact has been created</errorMessage>
</ValidationRule>